accept and content-type APPLICATION_JSON_UTF8_VALUE